Fix wrapping for releases

--- a/src/components/releases/styles.module.scss
+++ b/src/components/releases/styles.module.scss
@@ -4,12 +4,18 @@
 
   li {
     display: flex;
+    flex-wrap: wrap;
     margin-bottom: 2rem;
 
     img {
       width: 200px;
       height: 200px;
       margin-right: 1rem;
+      margin-bottom: 1rem;
+    }
+
+    header {
+      margin-bottom: 1rem;
     }
 
     .label, .year {
